# ML-project-softgate-KD

./: .gitignore  MLP-KD.ipynb  pyproject.toml
src/: data.py  metrics.py
src/MLP/: model.py  teacher.py  trainer.py
